# Parallel-Image-Processing-System

./: README.md
backend/: .dockerignore  CMakeLists.txt  Dockerfile  compile_err.txt  image_processor.cpp  image_processor.h  main.cpp  server.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: About.jsx  App.jsx  api.js  main.jsx
frontend/src/components/: FilterSelector.jsx  Header.jsx  ImageComparison.jsx  ImageUploader.jsx  ProcessingInfo.jsx
